<resources>
    <string name="app_name">DailyCaloriesTracker</string>
    <string name="register">Registrace uživatele</string>
    <string name="register_username">Uživatelské jméno</string>
    <string name="register_email">E-mailová adresa</string>
    <string name="register_password">Heslo</string>
    <string name="register_password_again">Heslo znovu</string>
    <string name="register_button">Vytvořit účet</string>
    <string name="register_error1">Vyplňte všechny údaje</string>
    <string name="register_error2">Hesla se neshodují</string>
    <string name="register_error3">Email už existuje</string>
    <string name="register_error4">Uživatelské jméno je již obsazeno</string>
    <string name="login">Přihlášení uživatele</string>
    <string name="login_username">Uživatelské jméno nebo e-mail</string>
    <string name="login_password">Heslo</string>
    <string name="login_button">Přihlásit se</string>
    <string name="login_error_empty">Vyplňte uživatelské jméno a heslo</string>
    <string name="login_error_bad">Špatné přihlašovací údaje</string>

    <!-- HomeActivity strings -->
    <string name="home_title">Daily Calories Tracker</string>
    <string name="add_meal">Přidat jídlo</string>
    <string name="meals_overview">Přehled jídel</string>
    <string name="sign_out">Odhlásit se</string>
    <string name="burger_desc">Obrázek burgeru</string>

    <!-- AddMealActivity strings-->
    <string name="add_meal_title">Přidat jídlo</string>
    <string name="hint_name">Název jídla</string>
    <string name="hint_calories">Kalorie (kcal)</string>
    <string name="hint_carbs">Sacharidy (g)</string>
    <string name="hint_protein">Bílkoviny (g)</string>
    <string name="hint_fat">Tuky (g)</string>
    <string name="label_meal_type">Typ jídla</string>
    <string name="cancel">Zrušit</string>
    <string name="save">Uložit</string>
    <string name="error_enter_name">Zadejte název jídla</string>
    <string name="toast_meal_saved">Jídlo uloženo</string>

    <!-- Meals overview strings -->
    <string name="meals_overview_title">Přehled jídel</string>
    <string name="filter_datetime">Filtrování podle datumu</string>
    <string name="filter_from">Od</string>
    <string name="filter_to">Do</string>
    <string name="filter_clear">Vymazat filtr</string>
    <string name="confirm_delete">Potvrdit smazání</string>
    <string name="confirm_delete_message">Opravdu chcete toto jídlo smazat?</string>
    <string name="delete">Smazat</string>
    <string name="edit">Editovat</string>
</resources>